# FreqInOut

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  FreqInOut.spec  LICENSE.md  MANIFEST.in  README.md  SECURITY.md  build_executable.py  install_freqinout.py  pyproject.toml  release_builder.py  requirements.txt  test_fldigi_wfhz.ps1  test_pyfldigi_wfhz.py  view_logs.py
config/leaflet/: fema_regions.geojson
docs/: Installation.md  guide.html
docs/internal/: SECURITY-PROCESS.md  security_incidents.yaml
docs/pyjs8call/: pyjs8call_docs.txt
freqinout/: __init__.py  __init__orig.py  __init__updated.py  main.py  version.py
freqinout/core/: checkins_db.py  config_paths.py  db_initializer.py  logger.py  scheduler_engine.py  scheduler_engine_orig.py  settings_manager.py  updater.py
freqinout/gui/: daily_schedule_tab.py  fldigi_net_control_tab.py  freq_planner_tab.py  help_tab.py  js8call_net_control_tab.py  log_viewer.py  main_window.py  message_viewer_tab.py  net_schedule_tab.py  operator_history_tab.py  peer_sched_tab.py  qsy_helper.py  settings_tab.py  stations_map_tab.py  time_conversion_tab.py
freqinout/radio_interface/: js8_status.py  rigctl_client.py
freqinout/utils/: __init__.py  __init__orig.py  timezones.py
tools/: db_admin.py  db_tools.py  js8_links_check.py  update_changelog_from_security.py
